# abby

./: .env.example  .gitignore  ABBY_INSTRUCTIONS.md  BUILD_PLAN.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
api/: agent-action.ts  agent-context.ts  agent-event.ts  capabilities.ts  chat.ts  check-in.ts  directory.ts  googleCloudStore.ts  health.ts  livekit-token.ts  patient-chat.ts  patient-context.ts  patient-session.ts  patientCore.ts  runs.ts
docs/: ARCHITECTURE.md
services/agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/agent/src/abby_agent/: __init__.py  agent.py  backend.py  prompt.py
services/agent/tests/: test_prompt.py
src/: App.css  App.tsx  PatientChat.tsx  Root.tsx  abbyEngine.ts  apiClient.ts  chatTypes.ts  index.css  providerNames.ts  types.ts
src/patient/: PatientApp.tsx  PatientVoiceRoom.tsx  patient.css  patientApi.ts  patientTypes.ts
tests/: patient-chat.test.ts  patient-core.test.ts  patient-session.test.ts
