[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abby-care-agent"
version = "0.1.0"
description = "Clinician-prescribed realtime voice agent for Abby"
requires-python = ">=3.11,<3.15"
dependencies = [
  "httpx>=0.28,<0.29",
  "livekit-agents[anthropic,elevenlabs]>=1.6.1,<1.7",
  "livekit-plugins-ai-coustics>=0.2,<0.3",
  "python-dotenv>=1.1,<2",
]

[dependency-groups]
dev = ["pytest>=8,<10", "pytest-asyncio>=0.25,<2", "ruff>=0.12,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]
